# oldskylt

./: .bash_history  README.md  bild  korasnabbt  kora~  rustet  test.c
.ncftp/: bookmarks  history  log  prefs
develop/: Makefile  Makefile.old  bank  bank.c  basskylt.cc  basskylt.cc.swp  basskylt.h  cls.c  font1.pnm  hscrolltext  image.cc  image.h  importpng.cc  importpng.h  ins.c  memmapshow  memmapshow.c  memmapshow.c~  mode  mode.c  mode.c~  pic1.pnm  prevcmd  random  random.c  random.c.bak  random.c~  scroll1.pnm  show.c  show.c~  showpic  showpic.cc  t.cc  test-bs  test-bs.c  test-bs.c~  text.cc  vscroll2.c  vscroll2.c~
driver/: myatoi.c  rmem  rmem.c  rport  rport.c  tst  wmem  wmem.c  wport
driver55/: bs.c  bs.h  wmem  wp.c
pics/: 1.sif  10.sif  11.sif  12.sif  13.sif  2.sif  3.sif  CMP1.sif  CMP2.sif  CMP3.sif  DEADJOE  DRUST_1.sif  DRUST_2.sif  DRUST_3.sif  DRUST_4.sif  DRUST_5.sif  DRUST_6.sif  DRUST_7.sif  DRUST_8.sif  KopSlump.sif  Risker.sif  aha.sif  aspa  aspa~  atest  atest~  b.sif  b1.sif  b2.sif  b3.sif  b4.sif  barba1.sif  barba2.sif  barba3.sif  barba4.sif  barba5.sif  basta.stadnollan.sif  besthafv.sif  chor.sif  core  (+48 more)
pics/anim/: s1.sif  s10.sif  s11.sif  s12.sif  s13.sif  s14.sif  s15.sif  s16.sif  s17.sif  s18.sif  s19.sif  s2.sif  s20.sif  s21.sif  s22.sif  s23.sif  s24.sif  s25.sif  s3.sif  s4.sif  s5.sif  s6.sif  s7.sif  s8.sif  s9.sif
pics/stada/: core  namn.sif  presents.sif  veckans.sif
skyltsrv/: ASSET_A_1073.tar  Makefile  SkyltController.cc  SkyltController.h  bs.h  skyltclient.cc  skyltsrv
skyltsrv/ASSET_A_1073/: Fork.C  Fork.h  MANIFEST  METRICS  Makefile  Makefile.in  README  acconfig.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  echo.C  echo.h  ftp.C  ftp.h  librarian_evaluation.1073  output  pipestream.C  pipestream.h  protocol.h  smtp.C  smtp.h  socket++.texi  sockinet.C  sockinet.h  sockstream.C  sockstream.h  sockunix.C  sockunix.h
skyltsrv/ASSET_A_1073/test/: Makefile  Makefile.in  commObj.C  commObj.h  configure.in  tcecho.C  tcftp-gate.C  tcftp-gate0.C  tcftp.C  tcsmtp.C  tdinread.C  tdinwrite.C  tdunread.C  tdunwrite.C  testall.C  testall.exp  testall.out  tfork.C  tfork0.C  thostnames.C  tnntp.C  tpipe.C  tpopen-ftp.C  tpopen-lpc.C  tpopen.C  tpopentest.C  tsecho.C  tsendfiles.C  tsinread.C  tsinwrite.C  tsmtp.C  tsockpair.C  tsunread.C  tsunwrite.C  twhois.C
utils/utils/: a.out  apa.sif  bank  bank~  basskylt.3  basskylt.4  basskylt.sif  bill.sif  delta  delta.sif  delta_new.sif  font1.sif  fyra.sif  gif.c  gif_p.h  gnu.sif  hailtr.sif  img2sif  img2sif.c  img2sif.c~  img2sif_new  invert.c  invertera  khan.ppm  khan.sif  khan5.sif  kor  kor~  linux.sif  mix  p  p.c  sp  sp.new.c  sp2  visa_flera  visa_flera.blink  visa_flera.blink~  visa_flera~
