# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

configdirs=
srctrigger=tdunread.C
srcname="test C++ sockets"

target_makefile_frag=../target-mkfrag
package_makefile_frag=Make.pack

# per-host:

# per-target:

TOLIBGXX=../
ALL='$(NOTHING)'
CXXINCLUDES='$(NOSTDINC) -I$(srcdir) -I.. -I$(srcdir)/..'
MOSTLYCLEAN='*.o *~ *.bak \#* core *.out $(TESTS)'

(. ${srcdir}/../config.shared) >${package_makefile_frag}

# post-target:

rm -f ${package_makefile_frag}
make makedepend > /dev/null 2>&1
